<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image_quiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bruce2"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/quiz_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.quizzapp.MainActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:text="@string/q1q"
            style="@style/question" />

        <TextView
            android:id="@+id/answer1"
            android:layout_height="wrap_content"
            tools:text="@string/q1a1"
            android:onClick="scoring"
            style="@style/answer" />

        <TextView
            android:id="@+id/answer2"
            android:layout_height="wrap_content"
            tools:text="@string/q1a2"
            android:onClick="scoring"
            style="@style/answer"/>

        <TextView
            android:id="@+id/answer3"
            android:layout_height="wrap_content"
            tools:text="@string/q1a3"
            android:onClick="scoring"
            style="@style/answer"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/checkbox1"
            style="@style/checkbox" />
        <TextView
            android:id="@+id/checkbox2"
            style="@style/checkbox"/>
        <TextView
            android:id="@+id/checkbox3"
            style="@style/checkbox"/>
        <TextView
            android:id="@+id/checkbox4"
            style="@style/checkbox"/>
        <TextView
            android:id="@+id/checkbox5"
            style="@style/checkbox"/>
        <TextView
            android:id="@+id/checkbox6"
            style="@style/checkbox"/>
        <TextView
            android:id="@+id/checkbox7"
            style="@style/checkbox"/>
        <TextView
            android:id="@+id/checkbox8"
            style="@style/checkbox"/>
        <TextView
            android:id="@+id/checkbox9"
            style="@style/checkbox"/>
        <TextView
            android:id="@+id/checkbox10"
            style="@style/checkbox"/>

    </LinearLayout>
</RelativeLayout>